<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bizzmanweb.handigoodman.simpleView.ui.home.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_bookingAddressFragment"
            app:destination="@id/bookingAddressFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bizzmanweb.handigoodman.simpleView.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.bizzmanweb.handigoodman.simpleView.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/bookingAddressFragment"
        android:name="com.bizzmanweb.handigoodman.simpleView.ui.bookingAddress.ui.BookingAddressFragment"
        android:label="BookingAddressFragment"
        tools:layout="@layout/fragment_booking_address">
        <action
            android:id="@+id/action_bookingAddressFragment_to_LoginFragment"
            app:destination="@id/loginFragement" />
        <action
            android:id="@+id/action_bookingAddressFragment_to_thankYouFragment"
            app:destination="@id/thankYouFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragement"
        android:name="com.bizzmanweb.handigoodman.simpleView.ui.login.LogInFragment"
        android:label="LogInFragment"
        tools:layout="@layout/log_in_fragment">
        <action
            android:id="@+id/action_bookingAddressFragment_to_thankYouFragment"
            app:destination="@id/thankYouFragment" />
    </fragment>
    <fragment
        android:id="@+id/thankYouFragment"
        android:name="com.bizzmanweb.handigoodman.thank_you.ThankYouFragment"
        android:label="ThankYouFragment"
        tools:layout="@layout/fragment_thank_you"/>
</navigation>