<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="login"
            type="com.bizzmanweb.handigoodman.simpleView.ui.login.LoginPageClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        android:nestedScrollingEnabled="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager_login"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/smallHeaderLayout" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/dotsLayout"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/viewPager_login"
                app:layout_constraintEnd_toEndOf="@+id/viewPager_login"
                app:layout_constraintStart_toStartOf="@+id/viewPager_login" />
            <TextView
                android:id="@+id/create_acc_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewPager_login"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/complete_from_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="10dp"
                android:text="@string/please_enter_below_details"
                android:textColor="@android:color/darker_gray"
                android:textSize="15dp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_acc_Txt" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="34dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/email"
                android:drawablePadding="6dp"
                android:fontFamily="@font/open_sans"
                android:hint="@string/email"
                android:inputType="phone"
                android:paddingHorizontal="20dp"
                android:singleLine="true"
                android:textAppearance="@style/Theme.AppButton"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/passwordTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/complete_from_Txt" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="34dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/new_lock"
                android:drawablePadding="6dp"
                android:fontFamily="@font/open_sans"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:minHeight="50dp"
                android:paddingHorizontal="20dp"
                android:textAppearance="@style/Theme.AppButton"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:letterSpacing="0.12"
                android:onClick="@{()-> login.onLogin()}"
                android:paddingVertical="14dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/passwordTxt"
                app:layout_constraintStart_toStartOf="@id/passwordTxt"
                app:layout_constraintTop_toBottomOf="@id/passwordTxt"
                app:shapeAppearance="@style/Theme.AppButton.Box" />

            <include
                android:id="@+id/smallHeaderLayout"
                layout="@layout/app_small_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>